Regression: Wireframe overlay on mesh Merge by Distance omits some edges #109577

Closed
opened 2023-07-01 08:03:19 +02:00 by Sun Kim · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-03 18:55, hash: 14b112ef825f
Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-31 02:03, hash: cde99075e870

Short description of error
Wireframe overlay on a mesh with geometry node setup of Extrude Mesh -> Merge by Distance omits some edges.

missing_edges_in_wireframe.png

Omission seems random and most times it's a few edges, but sometimes almost half of edges are omitted.

Exact steps for others to reproduce the error
missing_wireframe_edges.blend

It does not always happen. You may have to mute/unmute the Merge By Distance node several times to see it. It may be hard to notice in case it's just a couple of edges missing.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.61 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-03 18:55, hash: `14b112ef825f` Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-31 02:03, hash: `cde99075e870` **Short description of error** Wireframe overlay on a mesh with geometry node setup of Extrude Mesh -> Merge by Distance omits some edges. ![missing_edges_in_wireframe.png](/attachments/9a0e2f90-6ab7-4e2a-9222-751770753f46) Omission seems random and most times it's a few edges, but sometimes almost half of edges are omitted. **Exact steps for others to reproduce the error** [missing_wireframe_edges.blend](/attachments/e7b10b25-ddff-49d0-92ab-09d9fb4a2f30) It does not always happen. You may have to mute/unmute the Merge By Distance node several times to see it. It may be hard to notice in case it's just a couple of edges missing.
Sun Kim added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-01 08:03:20 +02:00
Iliya Katueshenock changed title from Wireframe overlay on mesh with Extrude Mesh -> Merge by Distance omits some edges to Regression: Wireframe overlay on mesh Merge by Distance omits some edges 2023-07-01 12:54:36 +02:00

The problem can be reproduced with an array of cubes. The only problem is that they have contiguous polygons. I see that this is a regression, thanks for the report!

The problem can be reproduced with an array of cubes. The only problem is that they have contiguous polygons. I see that this is a regression, thanks for the report!
Iliya Katueshenock added this to the 3.6 LTS milestone 2023-07-01 12:56:02 +02:00

I suspect it is caused by 1380ee74ff
@mano-wii /

I suspect it is caused by 1380ee74ffa73745d8e71a55d6a936b9c9abc792 @mano-wii /
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-03 00:25:50 +02:00

Thanks for the report.
It was fixed in 4.0 (main).
For 3.6 the fix was put on the list To Be Backported.
Blender LTS: Maintenance Task 3.6

Thanks for the report. It was fixed in 4.0 (main). For 3.6 the fix was put on the list To Be Backported. [Blender LTS: Maintenance Task 3.6](https://projects.blender.org/blender/blender/issues/109399)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109577
No description provided.