Fix #109577: Wireframe edge factor is sometimes random

In some situations the loop value might not be set.